# server-client

./: .clang-format  .gitignore  CMakeLists.txt  ca_config.conf  justfile
src/: client.c  client.h  common.c  common.h  main.c  server.c  server.h
ssl/: ca_config.conf  justfile
